# aeolusNative

./: .gitmodules  README.md  build.gradle
src/androidTest/java/com/mathis/aeolusnative/: ExampleInstrumentedTest.java
src/main/cpp/: AppMidiManager.cpp  CMakeLists.txt
src/main/cpp/aeolusJNI/: AeolusSynth_jni_functions.cpp  AeolusSynth_jni_functions.h  CMakeLists.txt
src/main/cpp/aeolusSynthesizer/: CMakeLists.txt
src/main/cpp/aeolusSynthesizer/AeolusSignalProcessing/: AeolusAudioProcessingDelegate.h
src/main/cpp/aeolusSynthesizer/MidiInterface/: CMakeLists.txt  MidiAndoidAeolus.cpp  MidiAndoidAeolus.h
src/main/cpp/aeolusSynthesizer/Synthesizer/: AeolusOscillator.cpp  AeolusSynthesizer.cpp  CMakeLists.txt
src/main/cpp/aeolusSynthesizer/Synthesizer/include/: AeolusOscillator.h  AeolusSynthesizer.h
src/main/cpp/aeolusSynthesizer/UserInterface/: CMakeLists.txt  android_aeolus_user_interface.cpp  android_aeolus_user_interface.h  android_aeolus_user_interface_jni.cpp  android_aeolus_user_interface_jni.h  textInterfaceIO.cpp  textInterfaceIO.h  tiface.cpp  tiface.h
src/main/cpp/midi_general/: MidiSpec.h
src/main/java/com/mathis/aeolusnative/AeolusSynth/: AeolusFileInstallation.java  AeolussynthManager.java
src/main/java/com/mathis/aeolusnative/hardwareMidi/: AppMidiManager.java
src/main/java/com/mathis/aeolusnative/userInterface/: AeolusUIManager.java  InterfaceUpdater.java
src/test/java/com/mathis/aeolusnative/: ExampleUnitTest.java
